k8s/ordering-app.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ddd-ordering
  namespace: ddd

spec:

  replicas: 3

  strategy:

    type: RollingUpdate

    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: ddd-ordering

  template:

    metadata:
      labels:
        app: ddd-ordering

    spec:

      terminationGracePeriodSeconds: 30

      containers:

        - name: ddd-ordering

          image: rdutta2/ddd-app:1.0.0

          imagePullPolicy: IfNotPresent

          ports:

            - containerPort: 8081
              name: http

          startupProbe:

            httpGet:
              path: /actuator/health
              port: 8081

            failureThreshold: 30
            periodSeconds: 10
            timeoutSeconds: 3


          # ==================================================
          # READINESS PROBE
          # ==================================================

          readinessProbe:

            httpGet:
              path: /actuator/health/readiness
              port: 8081

            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
            successThreshold: 1


          # ==================================================
          # LIVENESS PROBE
          # ==================================================

          livenessProbe:

            httpGet:
              path: /actuator/health/liveness
              port: 8081

            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3


          # ==================================================
          # RESOURCES
          # ==================================================

          resources:

            requests:
              cpu: "250m"
              memory: "512Mi"

            limits:
              cpu: "1"
              memory: "1Gi"
