k8s/jaeger.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: jaeger
  namespace: ddd

spec:
  replicas: 1

  selector:
    matchLabels:
      app: jaeger

  template:

    metadata:
      labels:
        app: jaeger

    spec:

      containers:

        - name: jaeger

          image: jaegertracing/jaeger:2.20.0

          ports:

            - containerPort: 16686
              name: ui

            - containerPort: 4317
              name: otlp-grpc

            - containerPort: 4318
              name: otlp-http

          resources:

            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"


---

apiVersion: v1
kind: Service

metadata:
  name: jaeger
  namespace: ddd

spec:

  selector:
    app: jaeger

  ports:

    - name: ui
      port: 16686
      targetPort: 16686

    - name: otlp-grpc
      port: 4317
      targetPort: 4317

    - name: otlp-http
      port: 4318
      targetPort: 4318

  type: ClusterIP
