k8s/otel-collector.yml

apiVersion: apps/v1
kind: Deployment

metadata:
  name: otel-collector
  namespace: ddd

spec:
  replicas: 1

  selector:
    matchLabels:
      app: otel-collector

  template:

    metadata:
      labels:
        app: otel-collector

    spec:

      containers:

        - name: otel-collector

          image: otel/opentelemetry-collector:0.159.0

          args:
            - "--config=/etc/otelcol/config.yaml"

          ports:

            - containerPort: 4317
              name: otlp-grpc

            - containerPort: 4318
              name: otlp-http

          volumeMounts:

            - name: config
              mountPath: /etc/otelcol

          resources:

            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

      volumes:

        - name: config

          configMap:
            name: otel-collector-config


---

apiVersion: v1
kind: Service

metadata:
  name: otel-collector
  namespace: ddd

spec:

  selector:
    app: otel-collector

  ports:

    - name: otlp-grpc
      port: 4317
      targetPort: 4317

    - name: otlp-http
      port: 4318
      targetPort: 4318

  type: ClusterIP
