k8s/postgres.yml
apiVersion: v1
kind: Service

metadata:
  name: postgres
  namespace: ddd

spec:
  selector:
    app: postgres

  ports:
    - name: postgres
      port: 5432
      targetPort: 5432

  type: ClusterIP


---

apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: postgres
  namespace: ddd

spec:
  serviceName: postgres

  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:

    metadata:
      labels:
        app: postgres

    spec:

      containers:

        - name: postgres

          image: postgres:17-alpine

          ports:
            - containerPort: 5432
              name: postgres

          resources:

            requests:
              cpu: "250m"
              memory: "256Mi"

            limits:
              cpu: "1"
              memory: "1Gi"

          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U postgres -d ddd_ordering

            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 5

          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U postgres -d ddd_ordering

            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 5

          volumeMounts:

            - name: postgres-data
              mountPath: /var/lib/postgresql/data


  volumeClaimTemplates:

    - metadata:
        name: postgres-data

      spec:

        accessModes:
          - ReadWriteOnce

        resources:
          requests:
            storage: 5Gi
