k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: ddd-ordering
  namespace: ddd

spec:

  selector:
    app: ddd-ordering

  ports:

    - name: http
      port: 8081
      targetPort: 8081

  type: ClusterIP
